<resources>
    <string name="app_name">MusicShop</string>
    <string name="your_name">Your name</string>
    <string name="orderPrice">Order Price</string>
    <string name="price">0 $</string>
    <string name="quantity">Quantity</string>
    <string name="remove">-</string>
    <string name="add">+</string>
    <string name="number">0</string>
    <string name="addToCart">Add To Cart</string>
    <string name="sendToEmail">Send to email</string>

    <string-array name="items">
        <item>Guitar</item>
        <item>Drum</item>
        <item>Violin</item>
    </string-array>
</resources>