<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_layout_margin"
        android:background="@color/grey_light"
        android:fontFamily="@font/montserrat"
        android:hint="@string/your_name"
        android:padding="@dimen/small_layout_margin"
        app:layout_constraintBottom_toTopOf="@id/image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="@dimen/small_layout_margin"
        android:src="@drawable/sunset"
        app:layout_constraintBottom_toTopOf="@id/spinner"
        app:layout_constraintTop_toBottomOf="@id/nameInput" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_layout_margin"
        android:entries="@array/items"
        app:layout_constraintBottom_toTopOf="@id/itemImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/small_layout_margin"
        android:src="@drawable/music"
        app:layout_constraintBottom_toTopOf="@id/linear_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@+id/addToCart"
        app:layout_constraintTop_toBottomOf="@+id/itemImage">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/small_layout_margin"
                android:fontFamily="@font/montserrat"
                android:text="@string/orderPrice" />

            <TextView
                android:id="@+id/price"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/small_layout_margin"
                android:fontFamily="@font/montserrat"
                android:text="@string/price" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/small_layout_margin"
                android:fontFamily="@font/montserrat"
                android:text="@string/quantity" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/remove"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_layout_margin"
                    android:layout_weight="1"
                    android:backgroundTint="@color/green"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/remove"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/quantity"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/small_layout_margin"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/number" />

                <Button
                    android:id="@+id/add"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_layout_margin"
                    android:layout_weight="1"
                    android:backgroundTint="@color/green"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/add"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/addToCart"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_layout_margin"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/addToCart"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
        tools:layout_editor_absoluteX="10dp" />


</androidx.constraintlayout.widget.ConstraintLayout>